--- a/templates/view-tar.html
+++ b/templates/view-tar.html
@@ -139,12 +139,12 @@
 
         <div class="flex flex-row gap-5 items-center mt-7 justify-between">
             <div class="flex flex-row items-center gap-4">
-                <h2 class="text-3xl font-bold dark:text-white">{{ item.title }}</h2>
-                {% if item.status == 'Not Started' %}
+                <h2 class="text-3xl font-bold dark:text-white">{{ data.item.title }}</h2>
+                {% if data.item.status == 'Not Started' %}
                 <div class="h-4 w-4 rounded-full bg-red-500 me-2"></div>
-                {% elif item.status == 'Ongoing' %}
+                {% elif data.item.status == 'Ongoing' %}
                 <div class="h-4 w-4 rounded-full bg-green-500 me-2"></div>
-                {% elif item.status == 'Finished' %}
+                {% elif data.item.status == 'Finished' %}
                 <div class="h-4 w-4 rounded-full bg-cyan-500 me-2"></div>
                 {% endif %}
             </div>
@@ -189,10 +189,10 @@
                     +3 more
                 </p>
             </div>
-            {% if item.type == 'TAR' %}
+            {% if data.item.type == 'TAR' %}
             <span
                 class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300">TAR</span>
-            {% elif item.type == 'EWR' %}
+            {% elif data.item.type == 'EWR' %}
             <span
                 class="bg-purple-100 text-purple-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-purple-900 dark:text-purple-300">EWR</span>
             {% endif %}
@@ -208,7 +208,7 @@
                     </div>
                     <div class="mt-6 border-t border-gray-700">
                         <dl class="divide-y divide-gray-700">
-                            {% for key, value in item.items() %}
+                            {% for key, value in data.item.items() %}
                             <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
                                 <dt class="text-normal font-medium leading-6 text-white">{{ key[0].upper() + key[1:] if
                                     key != 'id' else 'ID' }}</dt>
@@ -348,12 +348,47 @@
 
 
             </div>
-            <div id="right" class="w-2/3">
+            <div x-data="$store.data" id="right" class="w-2/3">
                 <!-- <h4 class="text-2xl font-bold dark:text-white">Activity Log</h4> -->
                 <h3 class="text-3xl font-bold dark:text-white">Activity Log</h3>
                 <p class="mt-1 max-w-2xl text-sm leading-6 text-gray-500">Log of Activities detected by LTAPal.</p>
+                <template x-for="activity in activities">
+                    <div
+                        class="p-5 mb-4 border border-gray-100 rounded-lg bg-gray-50 mt-4"
+                        :class="activity.alert ? 'dark:bg-red-950 dark:border-red-700' : 'dark:bg-gray-800 dark:border-gray-700'">
+                        <div id="row" class="flex w-full justify-between items-center">
+                            <div class="text-lg font-bold text-gray-900 dark:text-white w-5/6">
+                                <span x-text="activity.title"></span>
+                                <span x-text="`(${activity.details.length}/4)`"></span>
+                            </div>
+                            <span x-text="activity.timestamp"  class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400">
+                            </span>
+                        </div>
+                        <ol class="mt-3 divide-y divider-gray-200 dark:divide-gray-700">
+                            <template x-for="detail in activity.details">
 
-                <div
+                                <li>
+                                    <a href="#" class="items-center block p-3 sm:flex hover:bg-gray-100 dark:hover:bg-gray-700">
+                                        <img class="w-12 h-12 mb-3 me-3 rounded-full sm:mb-0"
+                                            :src="detail.profile_image"
+                                            alt="Jese Leos image" />
+                                        <div class="text-gray-600 dark:text-gray-400">
+                                            <div class="text-base font-normal"><span x-text="detail.name"
+                                                    class="font-medium text-gray-900 dark:text-white"></span> <span x-text="detail.action"></span>
+                                            </div>
+                                            <!-- <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div> -->
+                                            <span x-text="detail.timestamp"
+                                                class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400">
+                                            </span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </template>
+                        </ol>
+                    </div>
+                </template>
+
+                <!-- <div
                     class="p-5 mb-4 border border-gray-100 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700 mt-4">
                     <div id="row" class="flex w-full justify-between items-center">
                         <div class="text-lg font-bold text-gray-900 dark:text-white">Everyone checked in</div>
@@ -371,7 +406,7 @@
                                     <div class="text-base font-normal"><span
                                             class="font-medium text-gray-900 dark:text-white">Alonzo</span> checked in
                                     </div>
-                                    <!-- <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div> -->
+                                    <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div>
                                     <span
                                         class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400">
                                         1:30 AM
@@ -388,7 +423,7 @@
                                     <div class="text-base font-normal"><span
                                             class="font-medium text-gray-900 dark:text-white">Darius</span> checked in
                                     </div>
-                                    <!-- <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div> -->
+                                    <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div>
                                     <span
                                         class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400">
                                         1:30 AM
@@ -405,7 +440,7 @@
                                     <div class="text-base font-normal"><span
                                             class="font-medium text-gray-900 dark:text-white">Isaac</span> checked in
                                     </div>
-                                    <!-- <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div> -->
+                                    <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div>
                                     <span
                                         class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400">
                                         1:30 AM
@@ -422,7 +457,7 @@
                                     <div class="text-base font-normal"><span
                                             class="font-medium text-gray-900 dark:text-white">Venti</span> checked in
                                     </div>
-                                    <!-- <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div> -->
+                                    <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div>
                                     <span
                                         class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400">
                                         1:30 AM
@@ -457,7 +492,7 @@
                                         <span class="font-medium text-gray-900 dark:text-white">Workzone A</span> to
                                         <span class="font-medium text-gray-900 dark:text-white">Workzone B</span>
                                     </div>
-                                    <!-- <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div> -->
+                                    <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div>
                                     <span
                                         class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400">
                                         1:30 AM
@@ -476,7 +511,7 @@
                                         <span class="font-medium text-gray-900 dark:text-white">Workzone A</span> to
                                         <span class="font-medium text-gray-900 dark:text-white">Workzone B</span>
                                     </div>
-                                    <!-- <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div> -->
+                                    <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div>
                                     <span
                                         class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400">
                                         1:30 AM
@@ -495,7 +530,7 @@
                                         <span class="font-medium text-gray-900 dark:text-white">Workzone A</span> to
                                         <span class="font-medium text-gray-900 dark:text-white">Workzone B</span>
                                     </div>
-                                    <!-- <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div> -->
+                                    <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div>
                                     <span
                                         class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400">
                                         1:30 AM
@@ -529,7 +564,7 @@
                                         <span class="font-medium text-gray-900 dark:text-white">Workzone B</span> to
                                         <span class="font-medium text-gray-900 dark:text-white">Workzone C</span>
                                     </div>
-                                    <!-- <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div> -->
+                                    <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div>
                                     <span
                                         class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400">
                                         1:30 AM
@@ -624,16 +659,20 @@
                             </a>
                         </li>
                     </ol>
-                </div>
+                </div> -->
 
             </div>
         </div>
-
-
-
-
-
     </div>
 </body>
 
 </html>
+
+<script>
+    let original = {{ data | tojson }};
+
+    document.addEventListener('alpine:init', () => {
+        Alpine.store('data', original)
+    })
+
+</script>
